# aoc2024

./: .gitignore  aoc2024.cabal  aoc2024.code-workspace  stack.yaml
day1/: Day1.hs
day2/: Day2.hs
day3/: Day3.hs
day4/: Day4.hs
day5/: Day5.hs
day6/: Day6.hs
day7/: Day7.hs
src/AOC2024/Support/: Lexer.hs
test/: TestSupport.hs
